# ml-playground-stream

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/workflows/: check_code.yaml  main.yaml
core/: config.py
domain/: enums.py  log_transformer.py
infra/: object_storage_repository.py
service/: extract_service.py
src/tests/: test_extract_logs.py
tests/: test_csv_utils.py  test_enums.py  test_extract_logs.py  test_extract_service.py  test_format_utils.py  test_log_transformer.py
utils/: csv_utils.py  format_utils.py
